[gd_scene load_steps=28 format=3 uid="uid://bapu5ygd8o4na"]

[ext_resource type="Script" path="res://Scripts/Enemies/Infantry/Infantry_C.gd" id="1_c8jmj"]
[ext_resource type="Texture2D" uid="uid://dgc1docnn6tr1" path="res://Img/enemy/mortar/body.png" id="2_c0jpj"]
[ext_resource type="Texture2D" uid="uid://b8eio717dlc30" path="res://Img/player/player_body.png" id="3_3k2hk"]
[ext_resource type="Texture2D" uid="uid://b3e18cs1e0bxi" path="res://Img/enemy/mortar/foot.png" id="3_m6thi"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yxyxa"]
animation = &"launch"

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_l7ruw"]

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_s751v"]

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_fijuj"]

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_e6ske"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sed0y"]
animation = &"fall"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_87g0t"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_s41aw"]
animation = &"jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bu4sy"]
animation = &"move_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mdyv5"]
animation = &"move_right"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_s1euo"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_1o1y2"]
graph_offset = Vector2(-83.8249, 126.261)
nodes/Animation/node = SubResource("AnimationNodeAnimation_yxyxa")
nodes/Animation/position = Vector2(400, 320)
nodes/blend_fall/node = SubResource("AnimationNodeBlend2_l7ruw")
nodes/blend_fall/position = Vector2(240, 180)
nodes/blend_jump/node = SubResource("AnimationNodeBlend2_s751v")
nodes/blend_jump/position = Vector2(80, 140)
nodes/blend_move/node = SubResource("AnimationNodeBlend2_fijuj")
nodes/blend_move/position = Vector2(-80, 60)
nodes/blend_move_dir/node = SubResource("AnimationNodeBlend2_e6ske")
nodes/blend_move_dir/position = Vector2(-260, 180)
nodes/fall/node = SubResource("AnimationNodeAnimation_sed0y")
nodes/fall/position = Vector2(100, 360)
nodes/idle/node = SubResource("AnimationNodeAnimation_87g0t")
nodes/idle/position = Vector2(-260, 40)
nodes/jump/node = SubResource("AnimationNodeAnimation_s41aw")
nodes/jump/position = Vector2(-80, 260)
nodes/move_left/node = SubResource("AnimationNodeAnimation_bu4sy")
nodes/move_left/position = Vector2(-500, 180)
nodes/move_right/node = SubResource("AnimationNodeAnimation_mdyv5")
nodes/move_right/position = Vector2(-500, 300)
nodes/output/position = Vector2(740, 180)
nodes/shot_attack/node = SubResource("AnimationNodeOneShot_s1euo")
nodes/shot_attack/position = Vector2(580, 180)
node_connections = [&"output", 0, &"shot_attack", &"blend_fall", 0, &"blend_jump", &"blend_fall", 1, &"fall", &"blend_jump", 0, &"blend_move", &"blend_jump", 1, &"jump", &"blend_move", 0, &"idle", &"blend_move", 1, &"blend_move_dir", &"blend_move_dir", 0, &"move_left", &"blend_move_dir", 1, &"move_right", &"shot_attack", 0, &"blend_fall", &"shot_attack", 1, &"Animation"]

[sub_resource type="Animation" id="Animation_q4j18"]
resource_name = "fall"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Body:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-100, 160), Vector2(-80, 180), Vector2(-60, 160), Vector2(-80, 140), Vector2(-100, 160)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.0, 0.0, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Foot_1:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(80, 180), Vector2(60, 160), Vector2(80, 140), Vector2(100, 160), Vector2(80, 180)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Foot_1:rotation")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.0, 0.0, 0.0]
}

[sub_resource type="Animation" id="Animation_ea5oe"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Body:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 20), Vector2(0, 0), Vector2(0, 20)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-80, 160)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Foot_1:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(80, 160)]
}

[sub_resource type="Animation" id="Animation_2t81t"]
resource_name = "jump"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Body:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 20), Vector2(0, -30)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -1.0472]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Foot_1:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0472]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-80, 160), Vector2(-80, 160)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Foot_1:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(80, 160), Vector2(80, 160)]
}

[sub_resource type="Animation" id="Animation_b4sn3"]
resource_name = "move_left"
length = 0.5
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Body:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-10, 0), Vector2(-10, 5), Vector2(-10, 0), Vector2(-10, 5), Vector2(-10, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.35, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-80, 160), Vector2(80, 160), Vector2(40, 120), Vector2(-40, 120), Vector2(-80, 160)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Foot_1:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.15, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(80, 160), Vector2(40, 120), Vector2(-40, 120), Vector2(-80, 160), Vector2(80, 160)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.523599, 0.436332, 0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Foot_1:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.523599, 0.436332, 0.0, 0.0]
}

[sub_resource type="Animation" id="Animation_g35aw"]
resource_name = "move_right"
length = 0.5
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Body:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(10, 0), Vector2(10, 5), Vector2(10, 0), Vector2(10, 5), Vector2(10, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.15, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-80, 160), Vector2(-40, 120), Vector2(40, 120), Vector2(80, 160), Vector2(-80, 160)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Foot_1:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25, 0.35, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(80, 160), Vector2(-80, 160), Vector2(-40, 120), Vector2(40, 120), Vector2(80, 160)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.523599, -0.436332, 0.0, 0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Foot_1:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.25, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, -0.523599, -0.436332, 0.0]
}

[sub_resource type="Animation" id="Animation_8w8v2"]
resource_name = "launch"
length = 2.0
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Body/bullet_loader:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.1, 0, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(0, 0), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 1.2, 1.25, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 50), Vector2(0, 0), Vector2(0, 0), Vector2(0, 100), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.15, 1.2, 1.25, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-80, 160), Vector2(-80, 160), Vector2(-80, 160), Vector2(-80, 140), Vector2(-80, 160)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Foot_1:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.15, 1.2, 1.25, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(80, 160), Vector2(80, 160), Vector2(80, 160), Vector2(80, 140), Vector2(80, 160)]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("..")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"launch"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xn8b6"]
_data = {
"fall": SubResource("Animation_q4j18"),
"idle": SubResource("Animation_ea5oe"),
"jump": SubResource("Animation_2t81t"),
"launch": SubResource("Animation_8w8v2"),
"move_left": SubResource("Animation_b4sn3"),
"move_right": SubResource("Animation_g35aw")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m8hkk"]
size = Vector2(75, 75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j17ev"]
size = Vector2(75, 75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fyuw2"]
size = Vector2(2000, 2000)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6sxxm"]
radius = 100.0
height = 290.0

[node name="Infantry_C" type="CharacterBody2D"]
position = Vector2(-6, -3)
collision_layer = 2
collision_mask = 16
floor_constant_speed = true
script = ExtResource("1_c8jmj")
metadata/_edit_group_ = true

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeBlendTree_1o1y2")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/blend_fall/blend_amount = 0.0
parameters/blend_jump/blend_amount = 0.0
parameters/blend_move/blend_amount = 0.0
parameters/blend_move_dir/blend_amount = 1.0
parameters/shot_attack/active = false
parameters/shot_attack/internal_active = false
parameters/shot_attack/request = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Foot_0")
reset_on_save = false
movie_quit_on_finish = true
libraries = {
"": SubResource("AnimationLibrary_xn8b6")
}

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 10
lifetime = 1.3
one_shot = true
preprocess = 0.3
speed_scale = 3.0
emission_shape = 3
emission_rect_extents = Vector2(1, 1)
direction = Vector2(0, -1)
initial_velocity_max = 1000.0
scale_amount_min = 30.0
scale_amount_max = 50.0
color = Color(0, 0, 0, 1)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="Sensor_left_floor" type="Area2D" parent="."]
position = Vector2(-75, 250)
collision_layer = 4
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sensor_left_floor"]
shape = SubResource("RectangleShape2D_m8hkk")
debug_color = Color(0, 0.6, 0.701961, 0.0784314)

[node name="Sensor_right_floor" type="Area2D" parent="."]
position = Vector2(75, 250)
collision_layer = 4
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sensor_right_floor"]
shape = SubResource("RectangleShape2D_j17ev")
debug_color = Color(0, 0.6, 0.701961, 0.0784314)

[node name="Sensor_left" type="Area2D" parent="."]
collision_layer = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sensor_left"]
position = Vector2(-1000, 0)
shape = SubResource("RectangleShape2D_fyuw2")
debug_color = Color(0, 0.6, 0.701961, 0.0784314)

[node name="Sensor_right" type="Area2D" parent="."]
collision_layer = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sensor_right"]
position = Vector2(1000, 0)
shape = SubResource("RectangleShape2D_fyuw2")
debug_color = Color(0, 0.6, 0.701961, 0.0784314)

[node name="Sensor_action0" type="Area2D" parent="."]
collision_layer = 4
monitorable = false

[node name="CollisionShape2D2" type="CollisionPolygon2D" parent="Sensor_action0"]
polygon = PackedVector2Array(0, -3200, -3300, -2500, -6600, 0, -8000, 3200, 8000, 3200, 6600, 0, 3300, -2500)

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2(0, 40)
shape = SubResource("CapsuleShape2D_6sxxm")
debug_color = Color(0, 0.6, 0.701961, 0.0784314)

[node name="Body" type="Node2D" parent="."]
position = Vector2(0, 10.3711)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Body"]
rotation = 1.5708
texture = ExtResource("2_c0jpj")

[node name="Polygon2D0" type="Polygon2D" parent="Body"]
visible = false
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(100, 100, -100, 100, 0, -100, 0, 0)

[node name="bullet_loader" type="Node2D" parent="Body"]
scale = Vector2(1e-05, 1e-05)

[node name="Sprite2D" type="Sprite2D" parent="Body/bullet_loader"]
modulate = Color(1, 0, 0, 1)
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_3k2hk")

[node name="Foot_0" type="Node2D" parent="."]
position = Vector2(-80, 160)
metadata/_edit_group_ = true

[node name="Polygon2D0" type="Polygon2D" parent="Foot_0"]
visible = false
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(50, 25, -50, 25, 0, -25)

[node name="Sprite2D" type="Sprite2D" parent="Foot_0"]
modulate = Color(0, 0, 0, 1)
texture = ExtResource("3_m6thi")

[node name="Foot_1" type="Node2D" parent="."]
position = Vector2(80, 160)
metadata/_edit_group_ = true

[node name="Polygon2D0" type="Polygon2D" parent="Foot_1"]
visible = false
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(50, 25, -50, 25, 0, -25)

[node name="Sprite2D" type="Sprite2D" parent="Foot_1"]
modulate = Color(0, 0, 0, 1)
texture = ExtResource("3_m6thi")

[connection signal="animation_finished" from="AnimationTree" to="." method="_on_animation_tree_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_shape_entered" from="Sensor_left" to="." method="_on_sensor_left_body_shape_entered"]
[connection signal="body_shape_exited" from="Sensor_left" to="." method="_on_sensor_left_body_shape_exited"]
[connection signal="body_shape_entered" from="Sensor_right" to="." method="_on_sensor_right_body_shape_entered"]
[connection signal="body_shape_exited" from="Sensor_right" to="." method="_on_sensor_right_body_shape_exited"]
[connection signal="body_shape_entered" from="Sensor_action0" to="." method="_on_sensor_action_0_body_shape_entered"]
[connection signal="body_shape_exited" from="Sensor_action0" to="." method="_on_sensor_action_0_body_shape_exited"]
